# quadcast2Srgb

./: .clang-tidy  .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  build_install.sh  example_config.toml  packages.sh  uninstall.sh
.github/workflows/: build-windows.yml  release.yml
cmake/: cmake_uninstall.cmake.in
packaging/: 99-quadcast2srgb.rules  quadcast2srgb.service
resources/PKGBUILD/: PKGBUILD  build.sh  quadcast2srgb.install
resources/config/: config.toml  config_shader.toml  config_shader.toml.in  example_config_alternate_full.toml  example_config_alternate_full.toml.in
resources/deb/: Dockerfile  build.sh  docker-build.sh
resources/deb/debian/: changelog  conffiles  control  postinst  prerm  rules
resources/shader/: audiosphere.glsl  example_red_only.glsl  experimenting.glsl
resources/systemd/: quadcast2srgb.service  quadcast2srgb.service.in
src/: Common.h  Globals.cpp  Globals.h  Main.cpp
src/audio/: AudioTypes.h  CAudioProcessor.cpp  CAudioProcessor.h
src/communicator/: CQuadcast2SCommunicator.h
src/config/: CConfigBuilder.cpp  CConfigBuilder.h  SProgramConfig.h
src/display/: CColorTransitionDisplay.h  CEndCondition.h  CGLSLDisplay.h  CMultiDisplay.h  CPulseColorDisplay.h  CQC2SDisplay.h  CQC2SDisplayFactory.cpp  CQC2SDisplayFactory.h  CRainbowDisplay.h  CSolidColorDisplay.h  CVideoDisplay.h  ColorTypes.h  DisplayUtils.h
src/hid/: CQuadcast2SHandshaker.h  CUSBDeviceFinder.h  HIDTypes.h  Packets.h
src/packet/: PipePackets.fbs
src/util/: ArgParsing.cpp  ArgParsing.h  ConfigParser.cpp  ConfigParser.h  SetUtils.h
src/video/: VideoConstants.h  VideoProcessing.cpp  VideoProcessing.h
